[package]
name = "wolf_gang"
version = "0.1.0"
authors = ["lyon <lyonbeckers@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octree = { git="https://github.com/lyonbeckers/rs-octree.git" }
gdnative = "0.9"
gip = "0.7"
legion = "0.4"
parking_lot = "0.11"
libc = "0.2.80"
nalgebra = { version = "0.25", features = ["serde-serialize"] }
lazy_static = "1.4.0"
num = "0.4"
ron = "0.6.4"
serde = { version = "1.0.118", features = ["derive" ] }
serde_derive = "1.0.118"
approx = "0.4.0"
bincode = "1.3.1"
rayon = "1.5.0"
cobalt = "0.22.0"
uuid = { version = "0.8.1", features= ["v4"] }
snap = "1"
serde_json = "1.0.61"
crossbeam-channel = "0.5"

[lib]
crate-type = ["cdylib"]